z-index fix

--- a/quickModal.css
+++ b/quickModal.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 300;
+  z-index: 90010
   opacity: 0;
   transition: all .5s;
 }
@@ -29,7 +29,7 @@
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-  z-index: 301;
+  z-index: 9001;
   font-family: Arial;
   opacity: 0;
   transition: all .5s;
